--- a/about.html
+++ b/about.html
@@ -4,4 +4,10 @@ title: Aloha
 ---
 <!-- This page is not compatible with markdown -->
 
-测试.
+你好，
+很高兴见到你。
+斯是陋室，惟吾德馨。
+
+搭建这个博客大概用了一周的业余时间，
+到现在为止，还有一些或大或小的bug，但是因为目前的基础设施条件和个人技术能力限制，暂时还不能解决。
+同时，还有一些需要优化的feature，看时间，看心情。
