--- a/about.html
+++ b/about.html
@@ -4,10 +4,14 @@ title: Aloha
 ---
 <!-- This page is not compatible with markdown -->
 
-你好，
-很高兴见到你。
-斯是陋室，惟吾德馨。
+<h2 id="一些屁话">序</h2>
+<p>你好，</p>
+<p>很高兴见到你，</p>
+<p>这里是我的个人博客，</p>
+<p>斯是陋室，唯吾德馨。</p>
 
 搭建这个博客大概用了一周的业余时间，
 到现在为止，还有一些或大或小的bug，但是因为目前的基础设施条件和个人技术能力限制，暂时还不能解决。
 同时，还有一些需要优化的feature，看时间，看心情。
+
+
