--- a/about.html
+++ b/about.html
@@ -5,7 +5,9 @@ title: Aloha
 <!-- This page is not compatible with markdown -->
 <p>你好</p>
 <p>很高兴见到你</p>
-<p>这是我的个人博客，虽然有点简陋，不过</p>
+<p>这是我的个人博客</p>
+<p>功能比较简单</p>
+<p>不过</p>
 <p>斯是陋室，唯吾德馨</p>
 
 搭建这个博客大概用了一周的业余时间，
