--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ title: Aloha
 <p>你好</p>
 <p>很高兴见到你</p>
 <p>这是我的个人博客</p>
-<p>斯是陋室</p>
+<p><a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4"></a>斯是陋室</p>
 
 
 搭建这个博客大概用了一周的业余时间，
