--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: Aloha
 <p>这是我的个人博客</p>
 <p><a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a></p>
 
-
+<h2 id="why">WHY</h2>
 搭建这个博客大概用了一周的业余时间，
 到现在为止，还有一些或大或小的bug，但是因为目前的基础设施条件和个人技术能力限制，暂时还不能解决。
 同时，还有一些需要优化的feature，看时间，看心情。
