--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@ layout: about
 title: Aloha
 ---
 <!-- This page is not compatible with markdown -->
+<h2 id="what">WHAT</h2>
 <p>你好</p>
 <p>很高兴见到你</p>
 <p>这是我的个人博客</p>
