--- a/about.html
+++ b/about.html
@@ -9,9 +9,21 @@ title: Aloha
 <p>这是我的个人博客</p>
 <p><a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a></p>
 
-<h2 id="why">WHY</h2>
-搭建这个博客大概用了一周的业余时间，
-到现在为止，还有一些或大或小的bug，但是因为目前的基础设施条件和个人技术能力限制，暂时还不能解决。
-同时，还有一些需要优化的feature，看时间，看心情。
+<h2 id="who">WHO</h2>
+<p>关于我</p>
+<ul>
+  <li>男，199*</li>
+  <li>爱好广泛</li>
+</ul>
+<p>非现实称谓</p>
+<ul>
+  <li>themeiwu</li>
+  <li>Mr.Kafka(newly)</li>
+  <li>JoeWoo</li>
+  <li>smallbrandnew</li>
+  <li>piao(漂)</li>
+  <li>fengkuangdefala</li>
+  <li>etc.(想不起来了)</li>
+</ul>
 
 
