--- a/about.html
+++ b/about.html
@@ -13,17 +13,20 @@ title: Aloha
 <p>关于我</p>
 <ul>
   <li>男，199*</li>
-  <li>爱好广泛</li>
+  <li>爱好广泛(广泛是谁媳妇儿？)</li>
 </ul>
 <p>非现实称谓</p>
 <ul>
   <li>themeiwu</li>
-  <li>Mr.Kafka(newly)</li>
+  <li>Mr.Kafka(newly!)</li>
   <li>JoeWoo</li>
   <li>smallbrandnew</li>
-  <li>piao(漂)</li>
+  <li>piao</li>
   <li>fengkuangdefala</li>
-  <li>etc.(想不起来了)</li>
+  <li>etc.</li>
 </ul>
 
+<p>--------密封线-------------</p>
+<p>--------密封线-------------</p>
+<p>--------密封线-------------</p>
 
