--- a/about.html
+++ b/about.html
@@ -8,12 +8,12 @@ title: Aloha
 <p>很高兴见到你</p>
 <p>这是我的个人博客</p>
 <p><a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a></p>
-
+<p>--------密封线-------------</p>
 <h2 id="who">WHO</h2>
 <p>关于我</p>
 <ul>
   <li>男，199*</li>
-  <li>爱好广泛(广泛是谁媳妇儿？)</li>
+  <li>爱好广泛</li>
 </ul>
 <p>非现实称谓</p>
 <ul>
@@ -25,8 +25,16 @@ title: Aloha
   <li>fengkuangdefala</li>
   <li>etc.</li>
 </ul>
-
 <p>--------密封线-------------</p>
-<p>--------密封线-------------</p>
+<h2 id="why">WHY</h2>
+<p>你为什么会看到这个？</p>
+<ol>
+  <li>想拾掇个写字和记录的地方</li>
+  <li>我的blogger被墙了</li>
+  <li>我的VPS IP被封了</li>
+  <li>我想做个好人，坚决不再翻墙</li>
+  <li>我最近比较闲</li>
+  <li>我最近比较烦</li>
+</ol>
 <p>--------密封线-------------</p>
 
