--- a/about.html
+++ b/about.html
@@ -8,7 +8,6 @@ title: Aloha
 <p>很高兴见到你</p>
 <p>这是我的个人博客</p>
 <p><a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a></p>
-<p>--------密封线-------------</p>
 <h2 id="who" style="color:red ">WHO</h2>
 <p>关于我</p>
 <ul>
@@ -25,16 +24,23 @@ title: Aloha
   <li>fengkuangdefala</li>
   <li>etc.</li>
 </ul>
-<p>--------密封线-------------</p>
 <h2 id="why" style="color:red ">WHY</h2>
 <p>你为什么会看到这个？</p>
 <ol>
   <li>想拾掇个写字和记录的地方</li>
   <li>我的blogger被墙了</li>
   <li>我的VPS IP被封了</li>
-  <li>我想做个好人，坚决不再翻墙</li>
+  <li>我想做个好人，牢记社会主义核心价值观</li>
   <li>我最近比较闲</li>
   <li>我最近比较烦</li>
 </ol>
-<p>--------密封线-------------</p>
-
+<h2 id="where" style="color:red ">WHERE</h2>
+<p>此刻人在深圳</p>
+<p>Site托在Github上</p>
+<h2 id="when" style="color:red ">WHEN</h2>
+<p>2019年5月31日立项</p>
+<p>2019年5月31日完成第一个里程碑事件：确定站点名称</p>
+<p>2019年5月31日完成第二个里程碑事件：修改站点名称</p>
+<p>...无数失眠的夜晚...</p>
+<p>2019年6月7日，Alpha版上线</p>
+<h2 id="HOW" style="color:red ">HOW</h2>
