--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@ title: Aloha
 </ol>
 <h2 id="where" style="color:red ">WHERE</h2>
 <p>此刻人在深圳</p>
+<p>所有工作完成于深圳</p>
 <h2 id="when" style="color:red ">WHEN</h2>
 <p>2019年5月31日立项</p>
 <p>2019年5月31日完成第一个里程碑事件：确定站点名称</p>
@@ -43,7 +44,7 @@ title: Aloha
 <p>...无数失眠的夜晚...</p>
 <p>2019年6月7日，Alpha版上线</p>
 <h2 id="HOW" style="color:red ">HOW</h2>
-<p>一人之力不可能完成此项目</p>
+<p>凭我自己不可能完成此项目</p>
 <ul>
   <li>Site框架基于Jekyll&szhshp（致谢！）</li>
   <li>Site开发环境：Github-Ruby</li>
