--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@ layout: about
 title: Aloha
 ---
 <!-- This page is not compatible with markdown -->
-<h2 id="what" style="color:red ">WHAT</h2>
+<h2 id="what" style="color:purple"><strong>WHAT</strong></h2>
 <p>你好</p>
 <p>很高兴见到你</p>
 <p>这是我的个人博客</p>
 <p><a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a></p>
-<h2 id="who" style="color:red ">WHO</h2>
+<h2 id="who" style="color:purple">WHO</h2>
 <p>关于我</p>
 <ul>
   <li>男，199*</li>
