--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: Aloha
 <p>很高兴见到你</p>
 <p>这是我的个人博客</p>
 <p><a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a></p>
-<h2 id="who" style="color:purple">WHO</h2>
+<h2 id="who" style="color:purple"><strong>WHO</strong></h2>
 <p>关于我</p>
 <ul>
   <li>男，199*</li>
@@ -24,7 +24,7 @@ title: Aloha
   <li>fengkuangdefala</li>
   <li>etc.</li>
 </ul>
-<h2 id="why" style="color:red ">WHY</h2>
+<h2 id="why" style="color:purple"><strong>WHY</strong></h2>
 <p>你为什么会看到这个？</p>
 <ol>
   <li>想拾掇个写字和记录的地方</li>
@@ -34,20 +34,20 @@ title: Aloha
   <li>我最近比较闲</li>
   <li>我最近比较烦</li>
 </ol>
-<h2 id="where" style="color:red ">WHERE</h2>
+<h2 id="where" style="color:purple"><strong>WHERE</strong></h2>
 <p>此刻人在深圳</p>
 <p>所有工作完成于深圳</p>
-<h2 id="when" style="color:red ">WHEN</h2>
+<h2 id="when" style="color:purple"><strong>WHEN</strong></h2>
 <p>2019年5月31日立项</p>
 <p>2019年5月31日完成第一个里程碑事件：确定站点名称</p>
 <p>2019年5月31日完成第二个里程碑事件：修改站点名称</p>
 <p>...无数失眠的夜晚...</p>
 <p>2019年6月7日，Alpha版上线</p>
-<h2 id="HOW" style="color:red ">HOW</h2>
+<h2 id="HOW" style="color:purple"><strong>HOW<strong></h2>
 <p>凭我自己不可能完成此项目</p>
 <ul>
   <li>Site框架基于Jekyll&szhshp（致谢！）</li>
-  <li>Site开发环境：Github-Ruby</li>
+  <li>Site基于Github&Ruby开发</li>
   <li>Site域名注册于腾讯云</li>
   <li>Site SSL证书申请于TrustAsia</li>
   <li>Site BGM来自于网易云音乐</li>
