--- a/about.html
+++ b/about.html
@@ -27,15 +27,15 @@ title: Aloha
 <h2 id="why" style="color:purple"><strong>WHY</strong></h2>
 <p>你为什么会看到这个？</p>
 <ol>
-  <li>想拾掇个写字和记录的地方</li>
+  <li>我想拾掇个写字的地方</li>
   <li>我的blogger被墙了</li>
   <li>我的VPS IP被封了</li>
-  <li>我想做个好人，牢记社会主义核心价值观</li>
+  <li>我想做个好人，牢记社会主义核心价值观（想换IP被告知要钱）</li>
   <li>我最近比较闲</li>
   <li>我最近比较烦</li>
 </ol>
 <h2 id="where" style="color:purple"><strong>WHERE</strong></h2>
-<p>此刻人在深圳</p>
+<p>人在深圳</p>
 <p>所有工作完成于深圳</p>
 <h2 id="when" style="color:purple"><strong>WHEN</strong></h2>
 <p>2019年5月31日立项</p>
@@ -43,7 +43,7 @@ title: Aloha
 <p>2019年5月31日完成第二个里程碑事件：修改站点名称</p>
 <p>...无数失眠的夜晚...</p>
 <p>2019年6月7日，Alpha版上线</p>
-<h2 id="HOW" style="color:purple"><strong>HOW<strong></h2>
+<h2 id="HOW" style="color:purple"><strong>HOW</strong></h2>
 <p>凭我自己不可能完成此项目</p>
 <ul>
   <li>Site框架基于Jekyll&szhshp（致谢！）</li>
