--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: Aloha
 <p>你好</p>
 <p>很高兴见到你</p>
 <p>这是我的个人博客</p>
-<p><a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a></p>
+<p><a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室（划重点，下句要考！）</a></p>
 <h2 id="who" style="color:purple"><strong>WHO</strong></h2>
 <p>关于我</p>
 <ul>
@@ -27,12 +27,12 @@ title: Aloha
 <h2 id="why" style="color:purple"><strong>WHY</strong></h2>
 <p>你为什么会看到这个？</p>
 <ol>
-  <li>我想拾掇个写字的地方</li>
-  <li>我的blogger被墙了</li>
-  <li>我的VPS IP被封了</li>
-  <li>我想做个好人，牢记社会主义核心价值观（想换IP被告知要钱）</li>
-  <li>我最近比较闲</li>
-  <li>我最近比较烦</li>
+  <li>想拾掇个写字的地方</li>
+  <li>VPS IP被封了</li>
+  <li>Blogger被墙了</li>  
+  <li>想做个好人，牢记社会主义核心价值观（VPS换IP被告知要钱）</li>
+  <li>最近比较闲</li>
+  <li>最近比较烦</li>
 </ol>
 <h2 id="where" style="color:purple"><strong>WHERE</strong></h2>
 <p>人在深圳</p>
@@ -44,7 +44,6 @@ title: Aloha
 <p>...无数失眠的夜晚...</p>
 <p>2019年6月7日，Alpha版上线</p>
 <h2 id="HOW" style="color:purple"><strong>HOW</strong></h2>
-<p>凭我自己不可能完成此项目</p>
 <ul>
   <li>Site框架基于Jekyll&szhshp（致谢！）</li>
   <li>Site基于Github&Ruby开发</li>
@@ -53,4 +52,5 @@ title: Aloha
   <li>Site BGM来自于网易云音乐</li>
   <li>Site 留言接口来自于Disqus</li>
 </ul>
+<p>凭我自己不可能完成这个项目，感谢Github上所有愿意开源分享的开发者！</p>
  
