--- a/about.html
+++ b/about.html
@@ -25,14 +25,14 @@ title: Aloha
   <li>etc.</li>
 </ul>
 <h2 id="why" style="color:purple"><strong>WHY</strong></h2>
-<p>你为什么会看到这个？</p>
+<p>你为什么能看到这个？</p>
 <ol>
-  <li>想拾掇个写字的地方</li>
-  <li>VPS IP被封了</li>
-  <li>Blogger被墙了</li>  
-  <li>想做个好人，牢记社会主义核心价值观（VPS换IP被告知要钱）</li>
-  <li>最近比较闲</li>
-  <li>最近比较烦</li>
+  <li>我想拾掇个写字的地方</li>
+  <li>我的VPS IP被封了</li>
+  <li>我的Blogger被墙了</li>  
+  <li>我想做个好人，牢记社会主义核心价值观（VPS换IP被告知要钱）</li>
+  <li>我最近比较闲</li>
+  <li>我最近比较烦</li>
 </ol>
 <h2 id="where" style="color:purple"><strong>WHERE</strong></h2>
 <p>人在深圳</p>
