--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: about
-title: Aloha
+title: About
 ---
 <!-- This page is not compatible with markdown -->
 <h2 id="what" style="color:purple"><strong>WHAT</strong></h2>
