--- a/about.html
+++ b/about.html
@@ -15,15 +15,7 @@ title: About
   <li>爱好广泛</li>
 </ul>
 <p>非现实称谓</p>
-<ul>
-  <li>themeiwu</li>
-  <li>Mr.Kafka(newly!)</li>
-  <li>JoeWoo</li>
-  <li>smallbrandnew</li>
-  <li>piao</li>
-  <li>fengkuangdefala</li>
-  <li>etc.</li>
-</ul>
+ <p>themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/fengkuangdefala etc.</p>
 <h2 id="why" style="color:purple"><strong>WHY</strong></h2>
 <p>你为什么能看到这个？</p>
 <ol>
