--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ title: About
 <p>非现实称谓</p>
  <p>themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/fengkuangdefala etc.</p>
 <h2 id="why" style="color:purple"><strong>WHY</strong></h2>
-<p>你为什么能看到这个？</p>
+<p>关于“你为什么能看到这个？”的标准答案如下</p>
 <ol>
   <li>我想拾掇个写字的地方</li>
   <li>我的VPS IP被封了</li>
