--- a/about.html
+++ b/about.html
@@ -36,13 +36,12 @@ title: About
 <p>...无数失眠的夜晚...</p>
 <p>2019年6月7日，Alpha版上线</p>
 <h2 id="HOW" style="color:purple"><strong>HOW</strong></h2>
-<ul>
-  <li>Site框架基于Jekyll&szhshp（致谢！）</li>
-  <li>Site基于Github&Ruby开发</li>
-  <li>Site域名注册于腾讯云</li>
-  <li>Site SSL证书申请于TrustAsia</li>
-  <li>Site BGM来自于网易云音乐</li>
-  <li>Site 留言接口来自于Disqus</li>
-</ul>
+<p>Site框架基于Jekyll&szhshp（致谢！）</p>
+<p>Site基于Github&Ruby开发</p>
+<p>Site域名注册于腾讯云</p>
+<p>Site SSL证书申请于TrustAsia</p>
+<p>Site BGM来自于网易云音乐</p>
+<p>Site 留言接口来自于Disqus</p>
+
 <p>凭我自己不可能完成这个项目，感谢Github上所有愿意开源分享的开发者！</p>
  
