--- a/about.html
+++ b/about.html
@@ -43,5 +43,5 @@ title: About
 <p>Site BGM来自于网易云音乐</p>
 <p>Site 留言接口来自于Disqus</p>
 
-<p>凭我自己不可能完成这个项目，感谢Github上所有愿意开源分享的开发者！</p>
+<p>凭我自己不可能完成这个项目，感谢Github上所有开源分享的开发者！</p>
  
