--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@ title: About
 <p>2019年6月7日，Alpha版上线</p>
 <h2 id="HOW" style="color:purple"><strong>HOW</strong></h2>
 <p>Site框架基于Jekyll&szhshp（致谢！）</p>
-<p>Site基于Github&Ruby开发</p>
+<p>Site开发基于Github&Ruby</p>
 <p>Site域名注册于腾讯云</p>
 <p>Site SSL证书申请于TrustAsia</p>
 <p>Site BGM来自于网易云音乐</p>
