--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 ---
 layout: about
-title: About
+title: ABOUT
 ---
 <!-- This page is not compatible with markdown -->
-<h2 id="what" style="color:purple"><strong>WHAT</strong></h2>
+<h2 id="what" style="color:purple">What</h2>
 <p>你好</p>
 <p>很高兴见到你</p>
 <p>这是我的个人博客</p>
@@ -16,7 +16,7 @@ title: About
 </ul>
 <p>非现实称谓</p>
  <p>themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/fengkuangdefala etc.</p>
-<h2 id="why" style="color:purple"><strong>WHY</strong></h2>
+<h2 id="why" style="color:purple">WHY</h2>
 <p>关于“你为什么能看到这个？”的标准答案如下</p>
 <ol>
   <li>我想拾掇个写字的地方</li>
@@ -26,9 +26,10 @@ title: About
   <li>我最近比较闲</li>
   <li>我最近比较烦</li>
 </ol>
-<h2 id="where" style="color:purple"><strong>WHERE</strong></h2>
+<h2 id="where" style="color:purple">WHERE</h2>
 <p>人在深圳</p>
 <p>所有工作完成于深圳</p>
+<p>Site部署于GitHub</p>
 <h2 id="when" style="color:purple"><strong>WHEN</strong></h2>
 <p>2019年5月31日立项</p>
 <p>2019年5月31日完成第一个里程碑事件：确定站点名称</p>
