--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ title: ABOUT
 <p>非现实称谓</p>
  <p>themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/fengkuangdefala etc.</p>
 <h2 id="why" style="color:purple">WHY</h2>
-<p>关于“你为什么能看到这个？”的标准答案如下</p>
+<p>关于“你为什么能看到这个？”的标准答案</p>
 <ol>
   <li>我想拾掇个写字的地方</li>
   <li>我的VPS IP被封了</li>
@@ -34,7 +34,8 @@ title: ABOUT
 <p>2019年5月31日立项</p>
 <p>2019年5月31日完成第一个里程碑事件：确定站点名称</p>
 <p>2019年5月31日完成第二个里程碑事件：修改站点名称</p>
-<p>...无数失眠的夜晚...</p>
+<p>...经过无数个失眠跟掉头发的夜晚之后...</p>
+<p>......tata!</p>
 <p>2019年6月7日，Alpha版上线</p>
 <h2 id="HOW" style="color:purple"><strong>HOW</strong></h2>
 <p>Site框架基于Jekyll&szhshp（致谢！）</p>
