--- a/about.html
+++ b/about.html
@@ -3,16 +3,15 @@ layout: about
 title: ABOUT
 ---
 <!-- This page is not compatible with markdown -->
-<h2 id="what" style="color:purple">What</h2>
+<h2 id="what" style="color:purple">WHAT</h2>
 <p>你好</p>
 <p>很高兴见到你</p>
 <p>这是我的个人博客</p>
 <p><a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室（划重点，下句要考！）</a></p>
-<h2 id="who" style="color:purple"><strong>WHO</strong></h2>
+<h2 id="who" style="color:purple">WHO</h2>
 <p>关于我</p>
 <ul>
-  <li>男，199*</li>
-  <li>爱好广泛</li>
+  <li>男,199*,爱好广泛</li>
 </ul>
 <p>非现实称谓</p>
  <p>themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/fengkuangdefala etc.</p>
@@ -37,7 +36,7 @@ title: ABOUT
 <p>...经过无数个失眠跟掉头发的夜晚之后...</p>
 <p>......tata!</p>
 <p>2019年6月7日，Alpha版上线</p>
-<h2 id="HOW" style="color:purple"><strong>HOW</strong></h2>
+<h2 id="HOW" style="color:purple">HOW</h2>
 <p>Site框架基于Jekyll&szhshp（致谢！）</p>
 <p>Site开发基于Github&Ruby</p>
 <p>Site域名注册于腾讯云</p>
