--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ title: ABOUT
 <p>这是我的个人博客</p>
 <p><a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室（划重点，下句要考！）</a></p>
 <h2 id="who" style="color:purple">WHO</h2>
-<p>关于我 &#9658 男,199*,爱好广泛</p>
+<p>关于我：男,199*</p>
 <p>非现实称谓</p>
  <p>themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/fengkuangdefala etc.</p>
 <h2 id="why" style="color:purple">WHY</h2>
