--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ title: ABOUT
 <p>这是我的个人博客</p>
 <p><a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室（划重点，下句要考！）</a></p>
 <h2 id="who" style="color:purple">WHO</h2>
-<p>关于我：男,199*</p>
+<p>关于我 : 男, 199?——</p>
 <p>非现实称谓</p>
  <p>themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/fengkuangdefala etc.</p>
 <h2 id="why" style="color:purple">WHY</h2>
@@ -26,7 +26,7 @@ title: ABOUT
 <p>人在深圳</p>
 <p>所有工作完成于深圳</p>
 <p>Site部署于GitHub</p>
-<h2 id="when" style="color:purple"><strong>WHEN</strong></h2>
+<h2 id="when" style="color:purple">WHEN</h2>
 <p>2019年5月31日立项</p>
 <p>2019年5月31日完成第一个里程碑事件：确定站点名称</p>
 <p>2019年5月31日完成第二个里程碑事件：修改站点名称</p>
@@ -41,5 +41,5 @@ title: ABOUT
 <p>Site BGM来自于网易云音乐</p>
 <p>Site 留言接口来自于Disqus</p>
 
-<p>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是真正的大神！</p>
+<p style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是真正的大神！<strong></p>
  
