--- a/about.html
+++ b/about.html
@@ -41,5 +41,5 @@ title: ABOUT
 <p>Site BGM来自于网易云音乐</p>
 <p>Site 留言接口来自于Disqus</p>
 
-<p style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是真正的大神！<strong></p>
+<p style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！<strong></p>
  
