--- a/about.html
+++ b/about.html
@@ -7,13 +7,13 @@ title: ABOUT
 <p>你好</p>
 <p>很高兴见到你</p>
 <p>这是我的个人博客</p>
-<p><a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室（划重点，下句要考！）</a></p>
+<p><a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a></p>
 <h2 id="who" style="color:purple">WHO</h2>
 <p>关于我 : 男, 199?——</p>
 <p>非现实称谓</p>
  <p>themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/fengkuangdefala etc.</p>
 <h2 id="why" style="color:purple">WHY</h2>
-<p>关于“你为什么能看到这个？”的标准答案</p>
+<p>关于“你为什么能看到这个”的标准答案</p>
 <ol>
   <li>我想拾掇个写字的地方</li>
   <li>我的VPS IP被封了</li>
