--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@ title: ABOUT
 <p>......tata!</p>
 <p>2019年6月7日，Alpha版上线</p>
 <h2 id="HOW" style="color:purple">HOW</h2>
-<p>Site框架基于Jekyll&szhshp（致谢！）</p>
+<p>Site框架基于Jekyll&szhshp（具名致谢！）</p>
 <p>Site开发基于Github&Ruby</p>
 <p>Site域名注册于某云</p>
 <p>Site SSL证书申请于TrustAsia</p>
