--- a/about.html
+++ b/about.html
@@ -42,4 +42,6 @@ title: ABOUT
 <p>Site 留言接口来自于Disqus</p>
 
 <p style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！<strong>
+<p>......</p>
+<p>除此之外</p>
  
