--- a/about.html
+++ b/about.html
@@ -44,4 +44,6 @@ title: ABOUT
 <p style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！<strong>
 <p>......</p>
 <p>除此之外</p>
- 
+<p>......</p>
+<p>如果有人从Saidbar的Messager按钮跳转到这个页面，一定会奇怪跟message有关的东西在哪</p>
+<p>实际上，这个页面本来的样子应该是这样的</p>
