--- a/about.html
+++ b/about.html
@@ -47,3 +47,4 @@ title: ABOUT
 <p>......</p>
 <p>如果有人从Saidbar的Messager按钮跳转到这个页面，一定会奇怪跟message有关的东西在哪</p>
 <p>实际上，这个页面本来的样子应该是这样的</p>
+<img src="/img/tata.PNG"  alt="正确的打开姿势" />
