--- a/about.html
+++ b/about.html
@@ -43,6 +43,8 @@ title: ABOUT
 
 <p style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！<strong>
 <p>......</p>
-<p>除此之外</p>
+<p>除此之外，目前已知Bug包括</p>
 <p>......</p>
-
+<p>因为版权问题，境外互联网出口不能播放BGM</p>
+<p>同样因为版权问题，国内的BGM也有可能出现不能正常播放某曲目的情况</p>
+<p>因为Disqus被GFW屏蔽，这里和所有需要加载评论的页面都不能正常显示</p>
