--- a/about.html
+++ b/about.html
@@ -34,17 +34,15 @@ title: ABOUT
 <p>......tata!</p>
 <p>2019年6月7日，Alpha版上线</p>
 <h2 id="HOW" style="color:purple">HOW</h2>
-<p>Site框架基于Jekyll&szhshp（具名致谢！）</p>
-<p>Site开发基于Github&Ruby</p>
-<p>Site域名注册于某云</p>
-<p>Site SSL证书申请于TrustAsia</p>
-<p>Site BGM来自于网易云音乐</p>
-<p>Site 留言接口来自于Disqus</p>
+<p>框架基于Jekyll&szhshp（具名致谢！）</p>
+<p>开发环境基于Github&Ruby</p>
+<p>SSL证书申请于TrustAsia</p>
+<p>BGM来自于网易云音乐</p>
+<p>留言接口来自于Disqus</p>
 
-<p style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！<strong>
+<p style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！<strong></p>
 <p>......</p>
 <p>除此之外，目前已知Bug包括</p>
-<p>......</p>
-<p>因为版权问题，境外互联网出口不能播放BGM</p>
-<p>同样因为版权问题，国内的BGM也有可能出现不能正常播放某曲目的情况</p>
-<p>因为Disqus被GFW屏蔽，这里和所有需要加载评论的页面都不能正常显示</p>
+<p>因为版权问题，通过境外互联网出口访问站点不能播放BGM</p>
+<p>同样因为版权问题，国内的BGM也有可能出现不能正常播放某个曲目的情况</p>
+<p>因为Disqus被GFW屏蔽，所有需要加载评论的页面都不能正常显示</p>
