--- a/about.html
+++ b/about.html
@@ -4,10 +4,7 @@ title: ABOUT
 ---
 <!-- This page is not compatible with markdown -->
 <h2 id="what" style="color:purple">WHAT</h2>
-<p>你好</p>
-<p>很高兴见到你</p>
-<p>这是我的个人博客</p>
-<p><a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a></p>
+<p>你好，很高兴见到你，这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a></p>
 <h2 id="who" style="color:purple">WHO</h2>
 <p>关于我 : 男，汉族，199?—</p>
 <p>非现实称谓</p>
@@ -41,8 +38,10 @@ title: ABOUT
 <p>留言接口来自于Disqus</p>
 
 <p style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！<strong></p>
+ <div>
 <p>......</p>
 <p>除此之外，目前已知Bug包括</p>
 <p>因为版权问题，通过境外互联网出口访问站点不能播放BGM</p>
 <p>同样因为版权问题，国内的BGM也有可能出现不能正常播放某个曲目的情况</p>
 <p>因为Disqus被GFW屏蔽，所有需要加载评论的页面都不能正常显示</p>
+</div>
