--- a/about.html
+++ b/about.html
@@ -7,8 +7,7 @@ title: ABOUT
 <p>你好，很高兴见到你，这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a></p>
 <h2 id="who" style="color:purple">WHO</h2>
 <p>关于我 : 男，汉族，199?—</p>
-<p>非现实称谓</p>
- <p>themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/fengkuangdefala etc.</p>
+<p>非现实称谓:themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/fengkuangdefala etc.</p>
 <h2 id="why" style="color:purple">WHY</h2>
 <p>关于“你为什么能看到这个”的标准答案</p>
 <ol>
@@ -21,7 +20,7 @@ title: ABOUT
 </ol>
 <h2 id="where" style="color:purple">WHERE</h2>
 <p>人在深圳</p>
-<p>所有工作完成于深圳</p>
+<p>所有工作完成于深圳宝安区洲石路某写字楼某层某工位</p>
 <p>Site部署于GitHub</p>
 <h2 id="when" style="color:purple">WHEN</h2>
 <p>2019年5月31日立项</p>
