--- a/about.html
+++ b/about.html
@@ -37,10 +37,10 @@ title: ABOUT
 <p>留言接口来自于Disqus</p>
 
 <p style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！<strong></p>
- <div>
 <p>......</p>
-<p>除此之外，目前已知Bug包括</p>
-<p>因为版权问题，通过境外互联网出口访问站点不能播放BGM</p>
-<p>同样因为版权问题，国内的BGM也有可能出现不能正常播放某个曲目的情况</p>
-<p>因为Disqus被GFW屏蔽，所有需要加载评论的页面都不能正常显示</p>
-</div>
+<p>目前已知Bug包括</p>
+ <ol>
+<li>因为版权问题，通过境外互联网出口访问站点不能播放BGM</li>
+<li>同样因为版权问题，国内的BGM也有可能出现不能正常播放某个曲目的情况</li>
+<li>Disqus被GFW屏蔽，所有需要加载评论的页面都不能正常显示，正常情况如下</li>
+</ol>
