--- a/about.html
+++ b/about.html
@@ -42,5 +42,5 @@ title: ABOUT
  <ol>
 <li>因为版权问题，通过境外互联网出口访问站点不能播放BGM</li>
 <li>同样因为版权问题，国内的BGM也有可能出现不能正常播放某个曲目的情况</li>
-<li>Disqus被GFW屏蔽，所有需要加载评论的页面都不能正常显示，正常情况如下</li>
+<li>Disqus被GFW屏蔽，所有需要加载评论和留言的页面都不能正常显示</li>
 </ol>
