--- a/about.html
+++ b/about.html
@@ -4,19 +4,19 @@ title: ABOUT
 ---
 <!-- This page is not compatible with markdown -->
 <h2 id="what" style="color:purple">WHAT</h2>
-<p>你好，很高兴见到你，这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a></p>
+<p>你好，很高兴见到你，这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室。</a></p>
 <h2 id="who" style="color:purple">WHO</h2>
 <p>关于我 : 男，汉族，199?—</p>
 <p>非现实称谓:themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/fengkuangdefala etc.</p>
 <h2 id="why" style="color:purple">WHY</h2>
-<p>关于“你为什么能看到这个”的标准答案</p>
+<p>关于“你为什么能看到这个”的标准答案：</p>
 <ol>
-  <li>我想拾掇个写字的地方</li>
-  <li>我的VPS IP被封了</li>
-  <li>我的Blogger被墙了</li>  
-  <li>我想做个好人，牢记社会主义核心价值观（VPS换IP被告知要钱）</li>
-  <li>我最近比较闲</li>
-  <li>我最近比较烦</li>
+  <li>我想拾掇个写字的地方；</li>
+  <li>我的VPS IP被封了；</li>
+  <li>我的Blogger被墙了；</li>  
+  <li>我想做个好人，牢记社会主义核心价值观（VPS换IP被告知要钱）；</li>
+  <li>我最近比较闲；</li>
+  <li>我最近比较烦。</li>
 </ol>
 <h2 id="where" style="color:purple">WHERE</h2>
 <p>人在深圳</p>
@@ -36,7 +36,7 @@ title: ABOUT
 <p>BGM来自于网易云音乐</p>
 <p>留言接口来自于Disqus</p>
 
-<p style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！<strong></p>
+<div><p style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！<strong></div>
 <p>......</p>
 <p>目前已知Bug包括</p>
  <ol>
