--- a/about.html
+++ b/about.html
@@ -35,8 +35,7 @@ title: ABOUT
 <p>SSL证书申请于TrustAsia</p>
 <p>BGM来自于网易云音乐</p>
 <p>留言接口来自于Disqus</p>
-
-<div><p style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！<strong></div>
+<h4 style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！<strong></h4>
 <p>......</p>
 <p>目前已知Bug包括</p>
  <ol>
