--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ title: ABOUT
 <h2 id="what" style="color:purple">WHAT</h2>
 <p>你好，很高兴见到你，这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a>。</p>
 <h2 id="who" style="color:purple">WHO</h2>
-<p>关于我 : 男，汉族，199?—</p>
+<p>男，汉族，199?—</p>
 <p>非现实称谓:themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/fengkuangdefala etc.</p>
 <h2 id="why" style="color:purple">WHY</h2>
 <p>关于“你为什么能看到这个”的标准答案：</p>
@@ -35,7 +35,7 @@ title: ABOUT
 <p>SSL证书申请于TrustAsia</p>
 <p>BGM来自于网易云音乐</p>
 <p>留言接口来自于Disqus</p>
-<h4 style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！<strong></h4>
+<h5 id="HOW" style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！<strong></h5>
 <p>......</p>
 <p>目前已知Bug包括</p>
  <ol>
