--- a/about.html
+++ b/about.html
@@ -35,9 +35,9 @@ title: ABOUT
 <p>SSL证书申请于TrustAsia</p>
 <p>BGM来自于网易云音乐</p>
 <p>留言接口来自于Disqus</p>
-<h5 id="HOW" style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！<strong></h5>
+<p style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！</strong></p>
 <p>......</p>
-<p>目前已知Bug包括</p>
+<p>目前站点已知问题包括</p>
  <ol>
 <li>因为版权问题，通过境外互联网出口访问站点不能播放BGM</li>
 <li>同样因为版权问题，国内的BGM也有可能出现不能正常播放某个曲目的情况</li>
