--- a/about.html
+++ b/about.html
@@ -37,9 +37,10 @@ title: ABOUT
 <p>留言接口来自于Disqus</p>
 <p style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！</strong></p>
 <p>......</p>
-<p>目前站点已知问题包括</p>
- <ol>
+<p>还有一些问题：</p>
+<ol>
 <li>因为版权问题，通过境外互联网出口访问站点不能播放BGM</li>
 <li>同样因为版权问题，国内的BGM也有可能出现不能正常播放某个曲目的情况</li>
 <li>Disqus被GFW屏蔽，所有需要加载评论和留言的页面都不能正常显示</li>
 </ol>
+<p>OK,that's all,have fun!</p>
