--- a/about.html
+++ b/about.html
@@ -40,7 +40,8 @@ title: ABOUT
 <p>还有一些问题：</p>
 <ul>
 <li>因为版权问题，通过境外互联网出口访问站点不能播放BGM</li>
-<li>同样因为版权问题，国内的BGM也有可能出现不能正常播放某个曲目的情况</li>
-<li>Disqus被GFW屏蔽，所有需要加载评论和留言的页面都不能正常显示</li>
+<li>同样因为版权问题，国内访问站点也有可能出现BGM的某个曲目不能正常播放的情况</li>
+<li>Disqus被GFW屏蔽，通过国内互联网出口访问站点时，所有需要加载评论和留言的页面都不能正常显示</li>
+<li>关于小屏显示优化问题，我表示自己已经尽力了，虽然以下要求听起来无理甚至令人发指，但还是建议在PC端浏览哈</li>
 </ul>
 <p>OK, that's all, have fun!</p>
