--- a/about.html
+++ b/about.html
@@ -18,9 +18,15 @@ title: ABOUT
   <li>我最近比较闲；</li>
   <li>我最近比较烦。</li>
 </ol>
-<p>富强、民主、文明、和谐</p>
-<p>自由、平等、公正、法制</p>
-<p>爱国、敬业、诚信、友善</p>
+<p>默念两遍：</p>
+<ul>
+<li>富强、民主、文明、和谐</li>
+<li>自由、平等、公正、法制</li>
+<li>爱国、敬业、诚信、友善</li>
+<li>富强、民主、文明、和谐</li>
+<li>自由、平等、公正、法制</li>
+<li>爱国、敬业、诚信、友善</li>
+ </ul>
 <h2 id="where" style="color:purple">WHERE</h2>
 <p>人在深圳</p>
 <p>所有工作完成于宝安区洲石路某写字楼某层某工位</p>
