--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@ title: ABOUT
   <li>我的VPS IP被封了；</li>
   <li>我的Blogger被墙了；</li>  
   <li>我想做个好人，牢记社会主义核心价值观（VPS换IP被告知要钱）；</li>
-  <li>我最近比较闲；</li>
-  <li>我最近比较烦。</li>
+  <li>最近比较闲；</li>
+  <li>最近比较烦。</li>
 </ol>
 <p>默念两遍：</p>
 <ul>
