--- a/about.html
+++ b/about.html
@@ -53,4 +53,4 @@ title: ABOUT
 <li>Disqus被GFW屏蔽，通过国内互联网出口访问站点时，所有需要加载评论和留言的页面都不能正常显示</li>
 <li>关于小屏显示优化问题，我表示自己已经尽力了，虽然以下要求听起来无理甚至令人发指，但还是建议在PC端浏览哈</li>
 </ul>
-<p>OK, that's all, have fun!</p>
+<p>OK, that's all&have fun!</p>
