--- a/about.html
+++ b/about.html
@@ -44,13 +44,13 @@ title: ABOUT
 <p>SSL证书申请于TrustAsia</p>
 <p>BGM来自于网易云音乐</p>
 <p>留言接口来自于Disqus</p>
-<p style="color:purple"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！</strong></p>
+<p style="color:red"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！</strong></p>
 <p>......</p>
 <p>还有一些问题：</p>
 <ul>
 <li>因为版权问题，通过境外互联网出口访问站点不能播放BGM</li>
 <li>同样因为版权问题，国内访问站点也有可能出现BGM的某个曲目不能正常播放的情况</li>
 <li>Disqus被GFW屏蔽，通过国内互联网出口访问站点时，所有需要加载评论和留言的页面都不能正常显示</li>
-<li>关于小屏显示优化问题，我表示自己已经尽力了，虽然以下要求听起来无理甚至令人发指，但还是建议在PC端浏览哈</li>
+<li>关于小屏显示优化问题，我已经尽量优化，不过目前还存在一些问题，建议在PC端浏览</li>
 </ul>
 <p>OK, that's all&have fun!</p>
