--- a/about.html
+++ b/about.html
@@ -51,6 +51,6 @@ title: ABOUT
 <li>因为版权问题，通过境外互联网出口访问站点不能播放BGM</li>
 <li>同样因为版权问题，国内访问站点也有可能出现BGM的某个曲目不能正常播放的情况</li>
 <li>Disqus被GFW屏蔽，通过国内互联网出口访问站点时，所有需要加载评论和留言的页面都不能正常显示</li>
-<li>关于小屏显示优化问题，我已经尽量优化，不过目前还存在一些问题，建议在PC端浏览</li>
+<li>关于小屏显示优化问题，卡夫卡先生已经尽量优化，不过目前还存在一些问题，建议在PC端浏览</li>
 </ul>
 <p>OK, that's all&have fun!</p>
