--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ title: ABOUT
 <h2 id="what" style="color:purple">WHAT</h2>
 <p>你好，很高兴见到你，这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a>。</p>
 <h2 id="who" style="color:purple">WHO</h2>
-<body style="text-align:center>
+<div style="display: block; margin: 0 auto; width: 50%;">
 <p>我？ 男，汉族，199?—</p>
 <p>非现实称谓 :themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao etc.</p>
 <h2 id="why" style="color:purple">WHY</h2>
@@ -55,4 +55,4 @@ title: ABOUT
 <li>关于小屏显示优化问题，卡夫卡先生已经尽量优化，不过目前还存在一些问题，建议在PC端浏览</li>
 </ul>
 <p>OK, that's all&have fun!</p>
-</body>
+</div>
