--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: ABOUT
 ---
 <!-- This page is not compatible with markdown -->
 <div style="display: block; margin: 0 auto; width: 50%;">
-<h2 id="what" style="color:purple">WHAT</h2>
+<h2 id="what" style="color:purple;text-align:center;">WHAT</h2>
 <p>你好，很高兴见到你，这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a>。</p>
 <h2 id="who" style="color:purple">WHO</h2>
 <p>我？ 男，汉族，199?—</p>
