--- a/about.html
+++ b/about.html
@@ -19,15 +19,7 @@ title: ABOUT
   <li>最近比较闲；</li>
   <li>最近比较烦。</li>
 </ol>
-<p style="text-align:center;">默念两遍：</p>
-<ul style="text-align:center;">
-<li>富强、民主、文明、和谐</li>
-<li>自由、平等、公正、法制</li>
-<li>爱国、敬业、诚信、友善</li>
-<li>富强、民主、文明、和谐</li>
-<li>自由、平等、公正、法制</li>
-<li>爱国、敬业、诚信、友善</li>
- </ul>
+
 <h2 id="where" style="color:purple;text-align:center;">WHERE</h2>
 <p style="text-align:center;">人在深圳</p>
 <p style="text-align:center;">所有工作完成于宝安区洲石路某写字楼某层某工位</p>
@@ -40,7 +32,7 @@ title: ABOUT
 <p style="text-align:center;">......tata!</p>
 <p style="text-align:center;">2019年6月7日，Alpha版上线</p>
 <h2 id="HOW" style="color:purple;text-align:center;">HOW</h2>
-<p style="text-align:center;>框架基于Jekyll&szhshp（具名致谢！）</p>
+<p style="text-align:center;">框架基于Jekyll&szhshp（具名致谢！）</p>
 <p style="text-align:center;">开发环境基于Github&Ruby</p>
 <p style="text-align:center;">SSL证书申请于TrustAsia</p>
 <p style="text-align:center;">BGM来自于网易云音乐</p>
@@ -48,10 +40,10 @@ title: ABOUT
 <p style="color:red;text-align:center;"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！</strong></p>
 <p style="text-align:center;">......</p>
 <p style="text-align:center;">还有一些问题：</p>
-<ul style="text-align:center;">
-<li>因为版权问题，通过境外互联网出口访问站点不能播放BGM</li>
-<li>同样因为版权问题，国内访问站点也有可能出现BGM的某个曲目不能正常播放的情况</li>
-<li>Disqus被GFW屏蔽，通过国内互联网出口访问站点时，所有需要加载评论和留言的页面都不能正常显示</li>
-<li>关于小屏显示优化问题，卡夫卡先生已经尽量优化，不过目前还存在一些问题，建议在PC端浏览</li>
-</ul>
+<p style="text-align:center;">
+<因为版权问题，通过境外互联网出口访问站点不能播放BGM>
+<同样因为版权问题，国内访问站点也有可能出现BGM的某个曲目不能正常播放的情况>
+<Disqus被GFW屏蔽，通过国内互联网出口访问站点时，所有需要加载评论和留言的页面都不能正常显示>
+<已经尽量优化小屏显示，不过目前还存在一些问题，建议在PC端浏览>
+</p>
 <p style="text-align:center;">OK, that's all&have fun!</p>
