--- a/about.html
+++ b/about.html
@@ -11,15 +11,14 @@ title: ABOUT
 <p style="text-align:center;">非现实称谓 :themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao etc.</p>
 <h2 id="why" style="color:purple;text-align:center;">WHY</h2>
 <p style="text-align:center;">关于“你为什么能看到这个”的标准答案：</p>
-<ol style="text-align:center;">
-  <li>我想拾掇个写字的地方；</li>
-  <li>我的VPS IP被封了；</li>
-  <li>我的Blogger被墙了；</li>  
-  <li>我想做个好人，牢记社会主义核心价值观（VPS换IP被告知要钱）；</li>
-  <li>最近比较闲；</li>
-  <li>最近比较烦。</li>
-</ol>
-
+<p style="text-align:center;">
+  我想拾掇个写字的地方
+  我的VPS IP被封了
+  我的Blogger被墙了  
+  我想做个好人，牢记社会主义核心价值观（VPS换IP被告知要钱）
+  最近比较闲
+  最近比较烦
+  </p>
 <h2 id="where" style="color:purple;text-align:center;">WHERE</h2>
 <p style="text-align:center;">人在深圳</p>
 <p style="text-align:center;">所有工作完成于宝安区洲石路某写字楼某层某工位</p>
