--- a/about.html
+++ b/about.html
@@ -8,17 +8,15 @@ title: ABOUT
 <p style="text-align:center;">你好，很高兴见到你，这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a>。</p>
 <h2 id="who" style="color:purple;text-align:center;">WHO</h2>
 <p style="text-align:center;">我？ 男，汉族，199?—</p>
-<p style="text-align:center;">非现实称谓 :themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao etc.</p>
+<p style="text-align:center;">你可以称呼我为</p>
+<p style="text-align:center;"> themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/whatever</p>
 <h2 id="why" style="color:purple;text-align:center;">WHY</h2>
-<p style="text-align:center;">关于“你为什么能看到这个”的标准答案：</p>
-<p style="text-align:center;">
-  我想拾掇个写字的地方
-  我的VPS IP被封了
-  我的Blogger被墙了  
-  我想做个好人，牢记社会主义核心价值观（VPS换IP被告知要钱）
-  最近比较闲
-  最近比较烦
-  </p>
+<p style="text-align:center;">关于这个博客的诞生</p>
+<p style="text-align:center;">我想拾掇个写字的地方</p>
+<p style="text-align:center;">我的VPS IP被封了</p>
+<p style="text-align:center;">我的Blogger被墙了</p>
+<p style="text-align:center;">最近比较闲</p>
+<p style="text-align:center;">最近比较烦</p>
 <h2 id="where" style="color:purple;text-align:center;">WHERE</h2>
 <p style="text-align:center;">人在深圳</p>
 <p style="text-align:center;">所有工作完成于宝安区洲石路某写字楼某层某工位</p>
@@ -39,10 +37,8 @@ title: ABOUT
 <p style="color:red;text-align:center;"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！</strong></p>
 <p style="text-align:center;">......</p>
 <p style="text-align:center;">还有一些问题：</p>
-<p style="text-align:center;">
-<因为版权问题，通过境外互联网出口访问站点不能播放BGM>
-<同样因为版权问题，国内访问站点也有可能出现BGM的某个曲目不能正常播放的情况>
-<Disqus被GFW屏蔽，通过国内互联网出口访问站点时，所有需要加载评论和留言的页面都不能正常显示>
-<已经尽量优化小屏显示，不过目前还存在一些问题，建议在PC端浏览>
-</p>
+<p style="text-align:center;">因为版权问题，通过境外互联网出口访问站点不能播放BGM</p>
+<p style="text-align:center;">同样因为版权问题，国内访问站点也有可能出现BGM的某个曲目不能正常播放的情况</p>
+<p style="text-align:center;">Disqus被GFW屏蔽，通过国内互联网出口访问站点时，所有需要加载评论和留言的页面都不能正常显示</p>
+<p style="text-align:center;">已经尽量优化小屏显示，不过目前还存在一些问题，建议在PC端浏览</p>
 <p style="text-align:center;">OK, that's all&have fun!</p>
