--- a/about.html
+++ b/about.html
@@ -4,41 +4,41 @@ title: ABOUT
 ---
 <!-- This page is not compatible with markdown -->
 
-<h2 id="what" style="color:purple;text-align:center;">WHAT</h2>
-<p style="text-align:center;">你好，很高兴见到你，这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a>。</p>
-<h2 id="who" style="color:purple;text-align:center;">WHO</h2>
-<p style="text-align:center;">我？ 男，汉族，199?—</p>
-<p style="text-align:center;">你可以称呼我为</p>
-<p style="text-align:center;"> themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/whatever</p>
-<h2 id="why" style="color:purple;text-align:center;">WHY</h2>
-<p style="text-align:center;">关于这个博客的诞生</p>
-<p style="text-align:center;">我想拾掇个写字的地方</p>
-<p style="text-align:center;">我的VPS IP被封了</p>
-<p style="text-align:center;">我的Blogger被墙了</p>
-<p style="text-align:center;">最近比较闲</p>
-<p style="text-align:center;">最近比较烦</p>
-<h2 id="where" style="color:purple;text-align:center;">WHERE</h2>
-<p style="text-align:center;">人在深圳</p>
-<p style="text-align:center;">所有工作完成于宝安区洲石路某写字楼某层某工位</p>
-<p style="text-align:center;">Site部署于GitHub</p>
-<h2 id="when" style="color:purple;text-align:center;">WHEN</h2>
-<p style="text-align:center;">2019年5月31日立项</p>
-<p style="text-align:center;">2019年5月31日完成第一个里程碑事件：确定站点名称</p>
-<p style="text-align:center;">2019年5月31日完成第二个里程碑事件：修改站点名称</p>
-<p style="text-align:center;">...经过无数个失眠跟掉头发的夜晚之后...</p>
-<p style="text-align:center;">......tata!</p>
-<p style="text-align:center;">2019年6月7日，Alpha版上线</p>
-<h2 id="HOW" style="color:purple;text-align:center;">HOW</h2>
-<p style="text-align:center;">框架基于Jekyll&szhshp（具名致谢！）</p>
-<p style="text-align:center;">开发环境基于Github&Ruby</p>
-<p style="text-align:center;">SSL证书申请于TrustAsia</p>
-<p style="text-align:center;">BGM来自于网易云音乐</p>
-<p style="text-align:center;">留言接口来自于Disqus</p>
-<p style="color:red;text-align:center;"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！</strong></p>
-<p style="text-align:center;">......</p>
-<p style="text-align:center;">还有一些问题：</p>
-<p style="text-align:center;">因为版权问题，通过境外互联网出口访问站点不能播放BGM</p>
-<p style="text-align:center;">同样因为版权问题，国内访问站点也有可能出现BGM的某个曲目不能正常播放的情况</p>
-<p style="text-align:center;">Disqus被GFW屏蔽，通过国内互联网出口访问站点时，所有需要加载评论和留言的页面都不能正常显示</p>
-<p style="text-align:center;">已经尽量优化小屏显示，不过目前还存在一些问题，建议在PC端浏览</p>
-<p style="text-align:center;">OK, that's all&have fun!</p>
+<h2 id="what" style="color:purple;">WHAT</h2>
+<p>你好，很高兴见到你，这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a>。</p>
+<h2 id="who" style="color:purple;">WHO</h2>
+<p>我？ 男，汉族，199?—</p>
+<p>你可以称呼我为</p>
+<p> themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/whatever</p>
+<h2 id="why" style="color:purple;">WHY</h2>
+<p>关于这个博客的诞生</p>
+<p>我想拾掇个写字的地方</p>
+<p>我的VPS IP被封了</p>
+<p>我的Blogger被墙了</p>
+<p>最近比较闲</p>
+<p>最近比较烦</p>
+<h2 id="where" style="color:purple;">WHERE</h2>
+<p>人在深圳</p>
+<p>所有工作完成于宝安区洲石路某写字楼某层某工位</p>
+<p>Site部署于GitHub</p>
+<h2 id="when" style="color:purple;">WHEN</h2>
+<p>2019年5月31日立项</p>
+<p>2019年5月31日完成第一个里程碑事件：确定站点名称</p>
+<p>2019年5月31日完成第二个里程碑事件：修改站点名称</p>
+<p>...经过无数个失眠跟掉头发的夜晚之后...</p>
+<p>......tata!</p>
+<p>2019年6月7日，Alpha版上线</p>
+<h2 id="HOW" style="color:purple;">HOW</h2>
+<p>框架基于Jekyll&szhshp（具名致谢！）</p>
+<p>开发环境基于Github&Ruby</p>
+<p>SSL证书申请于TrustAsia</p>
+<p>BGM来自于网易云音乐</p>
+<p>留言接口来自于Disqus</p>
+<p style="color:red;"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！</strong></p>
+<p>......</p>
+<p>还有一些问题：</p>
+<p>因为版权问题，通过境外互联网出口访问站点不能播放BGM</p>
+<p>同样因为版权问题，国内访问站点也有可能出现BGM的某个曲目不能正常播放的情况</p>
+<p>Disqus被GFW屏蔽，通过国内互联网出口访问站点时，所有需要加载评论和留言的页面都不能正常显示</p>
+<p>已经尽量优化小屏显示，不过目前还存在一些问题，建议在PC端浏览</p>
+<p>OK, that's all&have fun!</p>
