--- a/about.html
+++ b/about.html
@@ -7,9 +7,10 @@ title: ABOUT
 <h2 id="what" style="color:purple;">WHAT</h2>
 <p>你好，很高兴见到你，这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a>。</p>
 <h2 id="who" style="color:purple;">WHO</h2>
-<p>我？ 男，汉族，199?—</p>
-<p>你可以称呼我为</p>
-<p> themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/whatever</p>
+<p>关于我，男，汉族，199?—，你可以称呼我为:themeiwu/Mr.Kafka(newly!)/JoeWoo/smallbrandnew/piao/whatever</p>
+<p>截至到目前，我喜欢：</p>
+
+<p>截至到目前，我不喜欢：</p>
 <h2 id="why" style="color:purple;">WHY</h2>
 <p>关于这个博客的诞生</p>
 <p>我想拾掇个写字的地方</p>
