--- a/about.html
+++ b/about.html
@@ -10,23 +10,26 @@ title: ABOUT
 <p>关于我，男，汉族，199?—，你可以称呼我为:themeiwu/Mr.Kafka(newly!)
   /JoeWoo/smallbrandnew/piao/whatever</p>
 <p>到目前为止，我喜欢：</p>
-吃糖，骑车，跑步，
-<p>到目前为止，我不喜欢：</p>
+吃糖
+骑车
+跑步
+做所有到目前为止还没做过的事情
+毕竟不到80岁，还没玩儿够呢。
+<p>不喜欢：</p>
+复杂
 给别人打标签&被打标签
 逻辑混乱
 所有不自然的事物
-
 <p>到目前为止，我完成了：</p>
-渤海湾骑行
-海南岛骑行
-三阶魔方40s
+还算正常地活到现在
+环渤海湾骑行
+环海南岛骑行
 <h2 id="why" style="color:purple;">WHY</h2>
 <p>关于这个博客的诞生</p>
 <p>我想拾掇个写字的地方</p>
 <p>我的VPS IP被封了</p>
 <p>我的Blogger被墙了</p>
-<p>最近比较闲</p>
-<p>最近比较烦</p>
+<p>比较闲&烦</p>
 <h2 id="where" style="color:purple;">WHERE</h2>
 <p>人在深圳</p>
 <p>所有工作完成于宝安区洲石路某写字楼某层某工位</p>
@@ -44,7 +47,7 @@ title: ABOUT
 <p>SSL证书申请于TrustAsia</p>
 <p>BGM来自于网易云音乐</p>
 <p>留言接口来自于Disqus</p>
-<p style="color:red;"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是这个世界上真正的大神！</strong></p>
+<p style="color:red;"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是我世界观中真正的大神！</strong></p>
 <p>......</p>
 <p>还有一些问题：</p>
 <p>因为版权问题，通过境外互联网出口访问站点不能播放BGM</p>
