--- a/about.html
+++ b/about.html
@@ -13,8 +13,7 @@ title: ABOUT
 吃糖
 骑车
 跑步
-做所有到目前为止还没做过的事情
-毕竟不到80岁，还没玩儿够呢。
+做所有到目前为止还没做过的事
 <p>不喜欢：</p>
 复杂
 给别人打标签&被打标签
@@ -29,10 +28,9 @@ title: ABOUT
 <p>我想拾掇个写字的地方</p>
 <p>我的VPS IP被封了</p>
 <p>我的Blogger被墙了</p>
-<p>比较闲&烦</p>
+<p>我在公元2019年6月的一段时间里比较闲&烦</p>
 <h2 id="where" style="color:purple;">WHERE</h2>
-<p>人在深圳</p>
-<p>所有工作完成于宝安区洲石路某写字楼某层某工位</p>
+<p>深圳-宝安区洲石路某写字楼某层某工位</p>
 <p>Site部署于GitHub</p>
 <h2 id="when" style="color:purple;">WHEN</h2>
 <p>2019年5月31日立项</p>
@@ -42,16 +40,15 @@ title: ABOUT
 <p>......tata!</p>
 <p>2019年6月7日，Alpha版上线</p>
 <h2 id="HOW" style="color:purple;">HOW</h2>
-<p>框架基于Jekyll&szhshp（具名致谢！）</p>
-<p>开发环境基于Github&Ruby</p>
-<p>SSL证书申请于TrustAsia</p>
+<p>框架基于Jekyll & @szhshp（具名致谢！）</p>
+<p>开发环境基于Github & Ruby</p>
+<p>SSL证书来自于TrustAsia</p>
 <p>BGM来自于网易云音乐</p>
 <p>留言接口来自于Disqus</p>
-<p style="color:red;"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者，你们是我世界观中真正的大神！</strong></p>
-<p>......</p>
+<p style="color:red;"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者。在我的世界观里，你们是真正的大神！</strong></p>
 <p>还有一些问题：</p>
-<p>因为版权问题，通过境外互联网出口访问站点不能播放BGM</p>
+<p>因为版权问题，境外互联网出口访问站点不能播放BGM</p>
 <p>同样因为版权问题，国内访问站点也有可能出现BGM的某个曲目不能正常播放的情况</p>
-<p>Disqus被GFW屏蔽，通过国内互联网出口访问站点时，所有需要加载评论和留言的页面都不能正常显示</p>
+<p>Disqus被GFW屏蔽，通过国内互联网出口访问站点时，评论和留言的页面都不能正常显示</p>
 <p>已经尽量优化小屏显示，不过目前还存在一些问题，建议在PC端浏览</p>
 <p>OK, that's all&have fun!</p>
