--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@ title: ABOUT
 <p>SSL证书来自于TrustAsia</p>
 <p>BGM来自于网易云音乐</p>
 <p>留言接口来自于Disqus</p>
-<p style="color:red;"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者。在我的世界观里，你们是真正的大神！</strong></p>
+<p style="color:red;"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者。</strong></p>
 <p>还有一些问题：</p>
 <p>因为版权问题，境外互联网出口访问站点不能播放BGM</p>
 <p>同样因为版权问题，国内访问站点也有可能出现BGM的某个曲目不能正常播放的情况</p>
