--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: ABOUT
 <h2 id="what" style="color:purple;">WHAT</h2>
 <p>你好，很高兴见到你，这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a>。</p>
 <h2 id="who" style="color:purple;">WHO</h2>
-<img src="/about/0.jpg" width="400px"; height="400px"; style="position:absolute; left:500px; top:500px; ">
+![](   https://themeiwu.com/img/life/01.jpg){: width="800px"}
 <p>关于我，男，汉族，199?—</p>
 <p>你可以称呼我为:themeiwu/Mr.Kafka/JoeWoo/smallbrandnew</p>
 <p>到目前为止，我喜欢：</p>
