--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ title: ABOUT
 <p>你好，很高兴见到你，这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a>。</p>
 <h2 id="who" style="color:purple;">WHO</h2>
 
-<img src="https://themeiwu.com/img/life/01.jpg" width = "100" height = "100" div align=right />
+<img src="http://themeiwu.com/img/life/01.jpg" width = "100" height = "100" div align=right />
 <p>关于我，男，汉族，199?—</p>
 <p>你可以称呼我为:themeiwu/Mr.Kafka/JoeWoo/smallbrandnew</p>
 <p>到目前为止，我喜欢：</p>
