--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: ABOUT
 <h2 id="what" style="color:purple;">WHAT</h2>
 <p>你好，很高兴见到你，这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a>。</p>
 <h2 id="who" style="color:purple;">WHO</h2>
-<p><img src="/img/about/0.jpg"  height="400" width="400" align="right" /></p>
+<p><img src="/img/about/0.jpg"  height="350" width="350" align="right" /></p>
 <p>关于我，男，汉族，199?—</p>
 <p>你可以称呼我为:themeiwu/Mr.Kafka/JoeWoo/smallbrandnew</p>
 <p>到目前为止，我喜欢：</p>
@@ -23,14 +23,14 @@ title: ABOUT
 <p>环渤海湾骑行</p>
 <p>环海南岛骑行</p>
 <h2 id="why" style="color:purple;">WHY</h2>
-<p><img src="/img/about/3.jpg"  height="400" width="400" align="right" /></p>
+<p><img src="/img/about/3.jpg"  height="350" width="350" align="middle" /></p>
 <p>关于这个博客的诞生</p>
 <p>我想拾掇个写字的地方</p>
 <p>我的VPS IP被封了</p>
 <p>我的Blogger被墙了</p>
 <p>我在公元2019年6月的一段时间里比较闲&烦</p>
 <h2 id="where" style="color:purple;">WHERE</h2>
-<p><img src="/img/about/2.jpg"  height="400" width="400" align="right" /></p>
+<p><img src="/img/about/2.jpg"  height="350" width="350" align="left" /></p>
 <p>深圳-宝安区洲石路某写字楼某层某工位</p>
 <p>Site部署于GitHub</p>
 <h2 id="when" style="color:purple;">WHEN</h2>
@@ -44,10 +44,10 @@ title: ABOUT
 <p>框架基于Jekyll & @szhshp（具名致谢！）</p>
 <p>开发环境基于Github & Ruby</p>
 <p>SSL证书来自于TrustAsia</p>
+<p><img src="/img/about/1.jpg"  height="350" width="350" align="right" /></p>
 <p>BGM来自于网易云音乐</p>
 <p>留言接口来自于Disqus</p>
 <p style="color:red;"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者。</strong></p>
-<p><img src="/img/about/1.jpg"  height="400" width="400" align="right" /></p>
 <p>还有一些问题：</p>
 <p>因为版权问题，境外互联网出口访问站点不能播放BGM</p>
 <p>同样因为版权问题，国内访问站点也有可能出现BGM的某个曲目不能正常播放的情况</p>
