--- a/about.html
+++ b/about.html
@@ -23,14 +23,14 @@ title: ABOUT
 <p>环渤海湾骑行</p>
 <p>环海南岛骑行</p>
 <h2 id="why" style="color:purple;">WHY</h2>
-<p><img src="/img/about/3.jpg"  height="350" width="350" align="middle" /></p>
+<p><img src="/img/about/3.jpg"  height="350" width="350" align="centre" /></p>
 <p>关于这个博客的诞生</p>
 <p>我想拾掇个写字的地方</p>
 <p>我的VPS IP被封了</p>
 <p>我的Blogger被墙了</p>
 <p>我在公元2019年6月的一段时间里比较闲&烦</p>
 <h2 id="where" style="color:purple;">WHERE</h2>
-<p><img src="/img/about/2.jpg"  height="350" width="350" align="left" /></p>
+<p><img src="/img/about/2.jpg"  height="350" width="350" align="right" /></p>
 <p>深圳-宝安区洲石路某写字楼某层某工位</p>
 <p>Site部署于GitHub</p>
 <h2 id="when" style="color:purple;">WHEN</h2>
