--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ title: ABOUT
 <p>环渤海湾骑行</p>
 <p>环海南岛骑行</p>
 <h2 id="why" style="color:purple;">WHY</h2>
-<p><img src="/img/about/3.jpg"  height="350" width="350" align="centre" /></p>
+<p><img src="/img/about/3.jpg"  height="350" width="350" align="right" /></p>
 <p>关于这个博客的诞生</p>
 <p>我想拾掇个写字的地方</p>
 <p>我的VPS IP被封了</p>
