--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@ title: ABOUT
 <!-- This page is not compatible with markdown -->
 
 <h2 id="what" style="color:purple;">WHAT</h2>
+<p><img src="/img/about/19.jpg"  height="250" width="250" align="right" /></p>
+<p><img src="/img/about/21.jpg"  height="250" width="250" align="right" /></p>
 <p>你好，很高兴见到你，这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a>。</p>
 <h2 id="who" style="color:purple;">WHO</h2>
 <p><img src="/img/about/0.jpg"  height="250" width="250" align="right" /></p>
