--- a/about.html
+++ b/about.html
@@ -6,24 +6,23 @@ title: ABOUT
 
 <h2 id="what" style="color:purple;">WHAT</h2>
 <p><img src="/img/about/19.jpg"  height="250" width="250" align="right" /></p>
-<p><img src="/img/about/21.jpg"  height="250" width="250" align="right" /></p>
 <p>你好，很高兴见到你，这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a>。</p>
+<p><img src="/img/about/21.jpg"  height="250" width="250" align="right" /></p>
 <h2 id="who" style="color:purple;">WHO</h2>
 <p><img src="/img/about/0.jpg"  height="250" width="250" align="right" /></p>
 <p>关于我，男，汉族，199?—</p>
 <p>你可以称呼我为:themeiwu/Mr.Kafka/JoeWoo/smallbrandnew</p>
+<p><img src="/img/about/12.jpg"  height="250" width="250" align="right" /></p>
 <p>到目前为止，我喜欢：</p>
 <p>吃糖/骑车/跑步</p>
+<p><img src="/img/about/18_meitu_1.jpg"  height="250" width="250" align="right" /></p>
 <p>做所有到目前为止还没做过的事</p>
 <p>不喜欢：</p>
+<p><img src="/img/about/22.jpg"  height="250" width="250" align="right" /></p>
 <p>复杂</p>
 <p>给别人打标签&被打标签</p>
 <p>逻辑混乱</p>
 <p>所有不自然的事物</p>
-<p>到目前为止，我完成了：</p>
-<p>还算正常地活到现在</p>
-<p>环渤海湾骑行</p>
-<p>环海南岛骑行</p>
 <h2 id="why" style="color:purple;">WHY</h2>
 <p><img src="/img/about/3.jpg"  height="250" width="250" align="right" /></p>
 <p>关于这个博客的诞生</p>
