--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@ title: ABOUT
 <p>复杂</p>
 <p><img src="/img/about/21.jpg"  height="200" width="200" align="right" /></p>
 <p>给别人打标签&被打标签</p>
+<p><img src="/img/about/16.jpg"  height="200" width="200" align="right" /></p>
 <p>逻辑混乱</p>
 <p>所有不自然的事物</p>
 <p><img src="/img/about/18_meitu_1.jpg"  height="200" width="200" align="right" /></p>
