--- a/about.html
+++ b/about.html
@@ -12,12 +12,12 @@ title: ABOUT
 <p><img src="/img/about/16.jpg"  height="200" width="200" align="right" /></p>
 <p>关于我，男，汉族，199?—</p>
 <p>你可以称呼我为:themeiwu/Mr.Kafka/JoeWoo/smallbrandnew</p>
-<p>到目前为止，我喜欢：</p>
+<p style="color:green;"><strong>到目前为止，我喜欢：</strong></p>
 
 <p>吃糖/骑车/跑步</p>
 <p>做所有到目前为止还没做过的事</p>
 
-<p>不喜欢：</p>
+<p style="color:red;"><strong>不喜欢：</strong></p>
 <p>复杂</p>
 <p><img src="/img/about/21.jpg"  height="200" width="200" align="right" /></p>
 <p>给别人打标签&被打标签</p>
