--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ title: ABOUT
 <p>所有不自然的事物</p>
 <p><img src="/img/about/22_meitu_3.jpg"  height="200" width="200" align="right" /></p>
 <h2 id="why" style="color:purple;">WHY</h2>
-<p>关于这个博客的诞生</p>
+<p style="color:orange;"><strong>关于这个博客的诞生</strong></p>
 <p>我想拾掇个写字的地方</p>
 <p>我的VPS IP被封了</p>
 <p>我的Blogger被墙了</p>
@@ -50,7 +50,7 @@ title: ABOUT
 <p>BGM来自于网易云音乐</p>
 <p>留言接口来自于Disqus</p>
 <p style="color:red;"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者。</strong></p>
-<p>还有一些问题：</p>
+<p style="color:yellow;"><strong>还有一些问题：</strong></p>
 <p>因为版权问题，境外互联网出口访问站点不能播放BGM</p>
 <p>同样因为版权问题，国内访问站点也有可能出现BGM的某个曲目不能正常播放的情况</p>
 <p>Disqus被GFW屏蔽，通过国内互联网出口访问站点时，评论和留言的页面都不能正常显示</p>
