--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@ title: ABOUT
 <p>...经过无数个失眠跟掉头发的夜晚之后...</p>
 <p>......tata!</p>
 <p>2019年6月7日，Alpha版上线</p>
+<p><img src="/img/about/2.jpg"  height="200" width="200" align="right" /></p>
 <h2 id="HOW" style="color:purple;">HOW</h2>
 <p>框架基于Jekyll & @szhshp（具名致谢！）</p>
 <p>开发环境基于Github & Ruby</p>
