--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@ title: ABOUT
 <p>BGM来自于网易云音乐</p>
 <p>留言接口来自于Disqus</p>
 <p><img src="/img/about/1.jpg"  height="270" width="270" align="right" /></p>
-<p style="color:red;"><strong>凭我自己不可能完成这个项目，感谢在Github的所有开源分享的开发者。</strong></p>
-<p style="color:yellow;"><strong>还有一些问题：</strong></p>
+<p style="color:red;"><strong>凭我自己不可能完成这个项目，感谢在Github中所有开源分享的开发者。</strong></p>
+<p style="color:blue;"><strong>还有一些问题：</strong></p>
 <p>因为版权问题，境外互联网出口访问站点不能播放BGM</p>
 <p>同样因为版权问题，国内访问站点也有可能出现BGM的某个曲目不能正常播放的情况</p>
 <p>Disqus被GFW屏蔽，通过国内互联网出口访问站点时，评论和留言的页面都不能正常显示</p>
