--- a/about.html
+++ b/about.html
@@ -51,5 +51,4 @@ title: ABOUT
 <p>因为版权问题，境外互联网出口访问站点不能播放BGM</p>
 <p>同样因为版权问题，国内访问站点也有可能出现BGM的某个曲目不能正常播放的情况</p>
 <p>Disqus被GFW屏蔽，通过国内互联网出口访问站点时，评论和留言的页面都不能正常显示</p>
-<p>已经尽量优化小屏显示，不过目前还存在一些问题，建议在PC端浏览</p>
-<p>OK, that's all&have fun!</p>
+<p>已经尽量优化小屏显示，不过目前还存在一些问题，PC端浏览效果最佳</p>
