--- a/about.html
+++ b/about.html
@@ -45,6 +45,7 @@ title: ABOUT
 <p>SSL证书来自于TrustAsia</p>
 <p>BGM来自于网易云音乐</p>
 <p>留言接口来自于Disqus</p>
+<h2 id="what" style="color:purple;">AND</h2>
 <p><img src="/img/about/1.jpg"  height="270" width="270" align="right" /></p>
 <p style="color:red;"><strong>凭我自己不可能完成这个项目，感谢在Github中所有开源分享的开发者。</strong></p>
 <p style="color:blue;"><strong>还有一些问题：</strong></p>
