--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ title: ABOUT
 
 <h2 id="what" style="color:purple;">WHAT</h2>
 <p><img src="/img/about/0.jpg"  height="250" width="250" align="right" /></p>
-<p>Hi there, nice 2 see u, this is my personal blog<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a>。</p>
+<p>HI THERE, NICE 2 SEE U, 这是我的个人博客，<a target="_blank" href="https://hanyu.baidu.com/shici/detail?pid=e6f692c588a04cdcb23b045939e15c41&from=kg0&highlight=%E6%96%AF%E6%98%AF%E9%99%8B%E5%AE%A4">斯是陋室</a>。</p>
 <h2 id="who" style="color:purple;">WHO</h2>
 
 <p>关于我，男，汉族，199?—</p>
